--- a/package.json
+++ b/package.json
@@ -4,24 +4,31 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --open",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.8.0",
+    "d3": "^7.8.5",
     "framer-motion": "^10.16.2",
     "mathjs": "^11.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
+    "react-icons": "^5.0.1",
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0",
-    "ts-standard": "^12.0.2"
+    "react-zoom-pan-pinch": "^3.4.2",
+    "ts-standard": "^12.0.2",
+    "viz.js": "^2.1.2"
   },
   "devDependencies": {
-    "@types/react": "^18.2.15", 
+    "@types/d3": "^7.4.3",
+    "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/viz.js": "^2.1.5",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
